# intercal

./: .dockerignore  .env.example  .gitignore  Dockerfile.workers  README.md  llms-full.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.changes/: 2026-06-05-core-claims-recorded-at-fix.md  2026-06-05-plan-02-w2-normalize-audit.md  2026-06-05-plan-02-w4-provider-audit.md  2026-06-05-plan-02-w6-resolve-audit.md  2026-06-05-plan-02-w8-pipeline-audit.md  2026-06-05-plan-03-w1-query-layer-audit.md  2026-06-05-plan-03-w2-mounted-404-fix.md  2026-06-05-plan-03-w2-rest-surface.md  2026-06-05-plan-03-w6-verify-claim.md  2026-06-05-plan-03-w7-coverage-metric-audit.md  2026-06-05-plan-03-w7-freshness-coverage.md  2026-06-05-plan-07-w1-secret-fanout.md  2026-06-05-plan-07-w3-pipeline-cd-audit-2.md  2026-06-05-plan-07-w3-pipeline-cd.md  2026-06-06-corpus-taxonomy-source-policy.md  2026-06-06-dashboard-public-knowledge-experience.md  2026-06-06-dashboard-public-knowledge-pass-2.md  2026-06-06-dashboard-public-knowledge-quiet-audit.md  2026-06-06-mcp-stdio-bin-launcher.md  2026-06-06-plan-04-w3-audit-events-audit-2.md  2026-06-06-plan-04-w3-audit-events.md  2026-06-06-plan-04-w4-feedback-review-records.md  2026-06-06-plan-04-w5-dispatch-contract-doc.md  2026-06-06-plan-04-w6-observability.md  2026-06-06-plan-04-w6-provider-usage-append-only.md  2026-06-06-plan-04-w7-deployment-paths.md  (+19 more)
services/pipeline/: pyproject.toml
services/pipeline/src/intercal_pipeline/: __init__.py  __main__.py  cli.py  run.py
services/pipeline/tests/: test_w8_pipeline.py
(+122 files in other folders)
