[project]
name = "intercal-pipeline"
version = "0.1.0"
description = "Intercal pipeline orchestrator — chains ingest→normalize→extract→embed→resolve→link→derive→version."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "intercal-shared",
    "intercal-ingest",
    "intercal-extract",
    "intercal-resolve",
    "intercal-synthesize",
    "typer>=0.12.0",
]

[project.scripts]
intercal-pipeline = "intercal_pipeline.cli:main"

[tool.uv.sources]
intercal-shared = { workspace = true }
intercal-ingest = { workspace = true }
intercal-extract = { workspace = true }
intercal-resolve = { workspace = true }
intercal-synthesize = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intercal_pipeline"]
